--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "audate",
-  "version": "0.0.0",
-  "description": "Bringing voice-forward experiences to the browser",
+  "name": "search-preview",
+  "version": "0.0.1",
+  "description": "Smooth previews of links and search results",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -20,7 +20,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/justiceo/audate"
+    "url": "https://github.com/justiceo/search-preview"
   },
   "keywords": [
     "chrome",
