--- a/src/assets/manifest.json
+++ b/src/assets/manifest.json
@@ -1,12 +1,12 @@
 {
   "name": "__MSG_appName__",
   "description": "__MSG_appDesc__",
-  "homepage_url": "https://github.com/justiceo/audate",
-  "version": "22.08.12",
+  "homepage_url": "https://github.com/justiceo/search-preview",
+  "version": "09.25.22",
   "manifest_version": 3,
   "default_locale": "en",
   "author": "Justice Ogbonna",
-  "short_name": "Audate",
+  "short_name": "Search Preview",
   "permissions": ["storage", "declarativeNetRequest"],
   "declarative_net_request": {
     "rule_resources": [
