--- a/src/assets/manifest.json
+++ b/src/assets/manifest.json
@@ -24,7 +24,7 @@
       "24": "assets/images/logo-24x24.png",
       "32": "assets/images/logo-32x32.png"
     },
-    "default_title": "Audate",
+    "default_title": "Search Preview",
     "default_popup": "index.html#popup"
   },
   "icons": {
