Add floatie css to manifest

--- a/src/assets/manifest.json
+++ b/src/assets/manifest.json
@@ -92,7 +92,7 @@
       "matches": ["http://*/*", "https://*/*"],
       "all_frames": true,
       "js": ["content-script.js"],
-      "css": ["content-style.css"]
+      "css": ["content-style.css", "floatie.css"]
     }
   ],
   "background": {
