Clean up + logging fixes

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,7 +37,7 @@
           }
         ],
         "multiline-comment-style": [
-          "warn",
+          "off",
           "starred-block"
         ],
         "no-unused-vars": "off",
