--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,12 +18,9 @@
     "importHelpers": true,
     "resolveJsonModule": true,
     "esModuleInterop": true,
-    "target": "es2020",
+    "target": "es5" /* es5 necessary to support YouTube */,
     "module": "es2020",
-    "lib": [
-      "es2020",
-      "dom"
-    ]
+    "lib": ["es2020", "dom"]
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
