--- a/package.json
+++ b/package.json
@@ -34,64 +34,18 @@
     "notes"
   ],
   "dependencies": {
-    "@angular/animations": "^14.2.9",
-    "@angular/cdk": "^14.2.6",
-    "@angular/common": "^14.2.9",
-    "@angular/compiler": "^14.2.9",
-    "@angular/core": "^14.2.9",
-    "@angular/elements": "^14.2.9",
-    "@angular/forms": "^14.2.9",
-    "@angular/platform-browser": "^14.2.9",
-    "@angular/platform-browser-dynamic": "^14.2.9",
-    "@angular/router": "^14.2.9",
-    "@floating-ui/dom": "^1.0.4",
-    "@sentry/angular": "^7.17.4",
-    "@sentry/browser": "^7.17.4",
-    "@sentry/tracing": "^7.17.4",
-    "primeflex": "^3.2.1",
-    "primeicons": "^6.0.1",
-    "primeng": "^14.1.2",
-    "rxjs": "~7.5.7",
-    "tslib": "^2.4.1",
-    "zone.js": "~0.11.8"
-  },
-  "peerDependencies": {
-    "primeicons": "^6.0.1",
-    "primeng": "^14.1.2"
+    "@floating-ui/dom": "^1.1.0",
+    "lit": "^2.6.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.2.8",
-    "@angular-eslint/builder": "14.1.2",
-    "@angular-eslint/eslint-plugin": "14.1.2",
-    "@angular-eslint/eslint-plugin-template": "14.1.2",
-    "@angular-eslint/schematics": "14.1.2",
-    "@angular-eslint/template-parser": "14.1.2",
-    "@angular/cli": "^14.2.8",
-    "@angular/compiler-cli": "^14.2.9",
-    "@babel/core": "^7.20.2",
-    "@babel/preset-env": "^7.20.2",
-    "@babel/register": "^7.18.9",
-    "@types/chrome": "^0.0.200",
-    "@types/jasmine": "~4.3.0",
-    "@types/node": "^18.11.9",
-    "@types/webpack": "^5.28.0",
-    "@typescript-eslint/eslint-plugin": "^5.42.0",
-    "@typescript-eslint/parser": "^5.42.0",
-    "eslint": "^8.27.0",
-    "eslint-config-prettier": "^8.5.0",
+    "@types/chrome": "^0.0.204",
+    "@types/jasmine": "^4.3.1",
+    "@types/node": "^18.11.14",
+    "@types/puppeteer": "^7.0.4",
+    "esbuild": "0.16.4",
     "google-translate-api-x": "^10.5.2",
-    "gulp": "^4.0.2",
-    "html-webpack-plugin": "^5.5.0",
-    "jasmine-core": "~4.5.0",
+    "jasmine": "^4.5.0",
     "jimp": "^0.16.2",
-    "karma": "~6.4.1",
-    "karma-chrome-launcher": "~3.1.1",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.0.0",
-    "prettier": "^2.7.1",
-    "ts-loader": "^9.4.1",
-    "typescript": "~4.8.4",
-    "webpack-cli": "^4.10.0"
+    "puppeteer": "^19.4.0"
   }
 }
