Add sentry for error reporting

--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
   "dependencies": {
     "@braintree/sanitize-url": "^6.0.2",
     "@floating-ui/dom": "^1.1.0",
+    "@sentry/browser": "^7.30.0",
+    "@sentry/tracing": "^7.30.0",
     "lit": "^2.6.0",
     "winbox": "^0.2.6"
   },
