--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,7 +2,8 @@
   "name": "__MSG_appName__",
   "description": "__MSG_appDesc__",
   "homepage_url": "https://github.com/justiceo/search-preview",
-  "version": "23.01.13",
+  "__comment:version__": "Firefox does not support leading zeros in versions",
+  "version": "23.1.13",
   "manifest_version": 3,
   "default_locale": "en",
   "author": "Justice Ogbonna",
@@ -43,7 +44,8 @@
   ],
   "options_page": "options-page/options.html",
   "background": {
-    "service_worker": "background-script/service-worker.js"
+    "service_worker": "background-script/service-worker.js",
+    "__firefox__persistent": "false"
   },
   "__firefox__key": "",
   "__firefox__browser_specific_settings": {
