--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/jasmine": "^4.3.1",
     "@types/node": "^18.11.18",
     "@types/puppeteer": "^7.0.4",
+    "@webcomponents/webcomponentsjs": "^2.7.0",
     "esbuild": "0.16.4",
     "google-translate-api-x": "^10.5.2",
     "jasmine": "^4.5.0",
