Update npm scripts

--- a/package.json
+++ b/package.json
@@ -3,18 +3,12 @@
   "version": "22.12.22",
   "description": "Perform search and preview links in sidebars instead of opening new tabs",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "lint": "ng lint",
-    "start:chrome": "gulp ChromeDemo",
-    "start:firefox": "web-ext run --source-dir ./extension/",
-    "floatie": "webpack serve --config webpack.floatie-demo.config.js",
-    "package": "ng build --configuration=development && webpack --config webpack.chrome.config.js --env development && zip -r dist/sp-dev.zip dist/search-preview",
-    "package-prod": "ng build --configuration=production && webpack --config webpack.chrome.config.js --env production && zip -r dist/sp-prod.zip dist/search-preview",
-    "prettier": "prettier --write \"src/**/*.{js,json,css,scss,less,md,ts,html}\""
+    "build": "node tools/esbuild.js",
+    "test": "node tools/esbuild.js test",
+    "start": "node tools/esbuild.js start",
+    "start:firefox": "node tools/esbuild.js start --browser=firefox",
+    "generateIcons": "node tools/esbuild.js generateIcons",
+    "updateTranslations": "node tools/translateMessages.js"
   },
   "private": true,
   "author": "Justice Ogbonna",
