--- a/src/manifest.json
+++ b/src/manifest.json
@@ -7,7 +7,7 @@
   "manifest_version": 3,
   "default_locale": "en",
   "author": "Justice Ogbonna",
-  "short_name": "Search Preview",
+  "short_name": "Link Preview",
   "permissions": ["storage", "declarativeNetRequest", "contextMenus"],
   "declarative_net_request": {
     "rule_resources": [
