--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "node tools/esbuild.js test",
     "start": "node tools/esbuild.js start",
     "start:firefox": "node tools/esbuild.js start --browser=firefox",
-    "generateIcons": "node tools/esbuild.js generateIcons",
+    "generateIcons": "node tools/esbuild.js image --icons",
     "updateTranslations": "node tools/translateMessages.js"
   },
   "private": true,
