--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,7 @@
 {
   "name": "__MSG_appName__",
   "description": "__MSG_appDesc__",
+  "short_name": "__MSG_appShortName_",
   "homepage_url": "https://github.com/justiceo/search-preview",
   "__package_name__": "search-preview",
   "__comment:version__": "Firefox does not support leading zeros in versions",
@@ -9,8 +10,7 @@
   "manifest_version": 3,
   "default_locale": "en",
   "author": "Justice Ogbonna",
-  "short_name": "Link Preview",
-  "permissions": ["storage", "declarativeNetRequest", "contextMenus"],
+  "permissions": ["storage", "declarativeNetRequest", "contextMenus", "cookies"],
   "declarative_net_request": {
     "rule_resources": [
       {
