--- a/src/manifest.json
+++ b/src/manifest.json
@@ -49,6 +49,10 @@
   },
   "web_accessible_resources": [
     {
+      "resources": ["assets/logo-24x24.png"],
+      "matches": ["<all_urls>"]
+    },
+    {
       "resources": ["options-page/options.html"],
       "matches": ["<all_urls>"]
     },
