--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@sentry/browser": "^7.30.0",
     "@sentry/tracing": "^7.30.0",
     "@webcomponents/custom-elements": "^1.5.1",
+    "bootstrap": "^5.3.2",
     "lit": "^2.6.0",
     "winbox": "^0.2.6"
   },
