Update homepage URL

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,7 +2,7 @@
   "name": "__MSG_appName__",
   "description": "__MSG_appDesc__",
   "short_name": "__MSG_appShortName_",
-  "homepage_url": "https://github.com/justiceo/search-preview",
+  "homepage_url": "https://betterpreviews.com/",
   "__package_name__": "search-preview",
   "__comment:version__": "Firefox does not support leading zeros in versions",
   "version": "23.11.11",
