--- a/package.json
+++ b/package.json
@@ -40,16 +40,13 @@
     "@sentry/browser": "^7.30.0",
     "@sentry/tracing": "^7.30.0",
     "@webcomponents/custom-elements": "^1.5.1",
-    "bootstrap": "^5.3.2",
-    "lit": "^2.6.0",
-    "winbox": "^0.2.6"
+    "bootstrap": "^5.3.2"
   },
   "devDependencies": {
     "@types/chrome": "^0.0.204",
     "@types/jasmine": "^4.3.1",
     "@types/node": "^18.11.18",
     "@types/puppeteer": "^7.0.4",
-    "@webcomponents/webcomponentsjs": "^2.7.0",
     "esbuild": "0.16.4",
     "google-translate-api-x": "^10.5.2",
     "husky": "^8.0.3",
