--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "@sentry/browser": "^7.30.0",
     "@sentry/tracing": "^7.30.0",
     "@webcomponents/custom-elements": "^1.5.1",
-    "bootstrap": "^5.3.2"
+    "bootstrap": "^5.3.2",
+    "jsdom": "^24.0.0"
   },
   "devDependencies": {
     "@types/chrome": "^0.0.204",
