--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@sentry/tracing": "^7.30.0",
     "@webcomponents/custom-elements": "^1.5.1",
     "bootstrap": "^5.3.2",
+    "glob": "^10.3.10",
     "jsdom": "^24.0.0"
   },
   "devDependencies": {
