Move image generation out of main build script

--- a/package.json
+++ b/package.json
@@ -3,16 +3,15 @@
   "version": "1.0.0",
   "description": "Perform search and preview links in sidebars instead of opening new tabs",
   "scripts": {
-    "build": "node tools/esbuild.js",
-    "test": "node tools/esbuild.js test",
-    "watch": "node tools/esbuild.js watch",
-    "start": "node tools/esbuild.js start",
-    "start:firefox": "node tools/esbuild.js start --browser=firefox",
+    "build": "node tools/esbuild.js --task=build",
+    "test": "node tools/esbuild.js --task=test",
+    "watch": "node tools/esbuild.js --task=watch",
+    "start": "node tools/esbuild.js --task=start",
+    "start:firefox": "node tools/esbuild.js --task=start --browser=firefox",
     "format": "npx prettier . --write",
-    "generateIcons": "node tools/esbuild.js image --icons",
-    "updateTranslations": "node tools/translateMessages.js",
     "prepare": "husky install"
   },
+  "type": "module",
   "private": true,
   "author": "Justice Ogbonna",
   "license": "MIT",
