--- a/package.json
+++ b/package.json
@@ -38,21 +38,25 @@
     "@mozilla/readability": "^0.4.2",
     "@webcomponents/custom-elements": "^1.5.1",
     "bootstrap": "^5.3.2",
-    "glob": "^10.3.10",
-    "jsdom": "^24.0.0",
     "webextension-polyfill": "^0.10.0"
   },
   "devDependencies": {
+    "@mdn/browser-compat-data": "^5.5.22",
     "@types/chrome": "^0.0.204",
     "@types/jasmine": "^4.3.1",
     "@types/node": "^18.11.18",
     "@types/puppeteer": "^7.0.4",
+    "axios": "^1.6.8",
     "esbuild": "0.16.4",
+    "glob": "^10.3.10",
+    "fs-extra": "^11.2.0",
     "google-translate-api-x": "^10.5.2",
     "husky": "^8.0.3",
     "jasmine": "^4.5.0",
     "jimp": "^0.16.2",
+    "jsdom": "^24.0.0",
     "lint-staged": "^15.1.0",
+    "node-stream-zip": "^1.15.0",
     "prettier": "3.0.3",
     "puppeteer": "^19.4.0"
   }
